2012-02-23  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cfg.c, memory.[ch], ui.c: Allow choosing more RAM amounts for 400/800, based
  on possible combinations of CX852 and CX853 memory modules. Extending the
  list of available systems in "Select System" menu to include all new RAM
  sizes would be impractical, so a new option "RAM size" was added instead.


2012-02-19  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* atari.[ch], devices.c, esc.c, sysrom.[ch]: Make OS patches work depending on
  OS version. Now patches work correctly also with Rev. A PAL and Rev. 1
  (600XL).

2012-02-16  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* atari.[ch], cartridge.c, cfg.c, devices.c, esc.c, memory.[ch], sysrom.[ch],
  ui_basic.c, ui.c, android/jni/jni.c: Merge Atari800_MACHINE_OSA and
  Atari800_MACHINE_OSB into Atari800_MACHINE_800 - no need for separate machine
  types since OS revision can now be selected.

* sysrom.c, atari800.man, DOC/USAGE: Support choosing OS revision from command
  line.


2012-02-10  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* atari.c, cfg.[ch], crc32.[ch], sysrom.[ch], ui.c, Makefile.in,
  dc/Makefile.dc, win32/msc/Makefile, android/jni/jni.c,
  android/jni/Android.mk.in: Two new modules (crc32, sysrom) that add a new
  functionality of searching for OS/BASIC ROM images based on known CRC32
  hashes. Added possibility to select an OS/BASIC version when many are
  available ("Select System"). When switching between PAL/NTSC, NTSC or PAL
  version of OS Rev. A is selected accordingly.
  Android port updated to work correctly (OS/BASIC version selection is still
  missing though).


2012-01-27  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* xep80.c: Rename SetCursor to SetCursorMode to avoid conflict with a winuser.h
  function under MinGW.


2012-01-19  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* xep80_fonts.c, xep80.[ch], videomode.c: Rewtritten XEP80 emulation, based on
  disassembly of the XEP80 ROM. Programs such as EIGHTY.BAS from XEP80 System